<resources>
    <string name="app_name">SOPT29Assignment</string>
    <string name="sopt_hub">SOPTHub</string>
    <string name="login">로그인</string>
    <string name='id'>깃허브 아이디</string>
    <string name='password'>비밀번호</string>
    <string name="input_id">아이디를 입력해주세요</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름 </string>
    <string name="age">나이 </string>
    <string name="mbti">MBTI</string>
    <string name="introduce"> 안녕하세요!! </string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="complete_signup">회원가입 완료</string>
    <string name="follower">팔로워 \n 목록</string>
    <string name="repository">레포지토리 \n 목록</string>
    <string name="detail_introduce">상세 소개</string>
    <string name="no_id">계정이 없으신가요?</string>
    <string name="profile">프로필</string>
    <string name="home">홈</string>
    <string name="camera">카메라</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_boarding">온보딩</string>
    <string name="on_boarding_one">SOPTHub에 오신걸 \n 환영합니다!</string>
    <string name="on_boarding_two">SOPTHub에서 즐거운 시간 \n 보내시길 바랍니다!</string>
    <string name="on_boarding_three">SOPTHub를 \n 시작해볼까요?</string>
    <string name="next">다음</string>
    <string name="auto_login_remove">자동로그인 해제</string>
</resources>