<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity">

        <TextView
            android:id="@+id/text_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sopt_hub"
            android:textColor="@color/blue_37"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_detail_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="@+id/text_detail_title"
            app:layout_constraintStart_toStartOf="@+id/text_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title" />

        <TextView
            android:id="@+id/text_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_detail_profile"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_profile" />

        <TextView
            android:id="@+id/text_detail_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_introduce"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/text_profile_input_introduce"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/introduce"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_introduce"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>