<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/text_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sopt_hub"
        android:textColor="@color/blue_37"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>


    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintTop_toBottomOf="@+id/text_home_title"
        app:layout_constraintStart_toStartOf="@+id/text_home_title"
        app:layout_constraintEnd_toEndOf="@+id/text_home_title"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/text_home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"/>
    <TextView
        android:id="@+id/text_home_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/text_home_name"
        app:layout_constraintStart_toEndOf="@+id/text_home_name"
        android:layout_marginStart="60dp"
        android:text="곽호택"/>

    <TextView
        android:id="@+id/text_home_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_home_name"
        app:layout_constraintStart_toStartOf="@+id/text_home_name"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/text_home_input_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/text_home_age"
        app:layout_constraintStart_toStartOf="@+id/text_home_input_name"/>

    <TextView
        android:id="@+id/text_home_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mbti"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_home_age"
        app:layout_constraintStart_toStartOf="@+id/text_home_age"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INFP"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/text_home_mbti"
        app:layout_constraintStart_toStartOf="@+id/text_home_input_age"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/introduce"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_home_mbti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>