<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignInActivity">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sopt_hub"
            android:textColor="@color/blue_37"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintStart_toStartOf="@+id/text_title"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/text_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_border"
            android:hint="@string/input_id"
            app:layout_constraintTop_toBottomOf="@+id/text_id"
            app:layout_constraintStart_toStartOf="@id/text_id"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:padding="20dp" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/et_id"
            app:layout_constraintStart_toStartOf="@id/et_id"
            android:layout_marginTop="50dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:background="@drawable/login_border"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/text_password"
            app:layout_constraintTop_toBottomOf="@+id/text_password"
            app:layout_constraintEnd_toEndOf="@id/et_id"
            android:layout_marginTop="10dp"
            android:padding="20dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/blue_37"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_37"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>