<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.sign.SignUpActivity">



        <TextView
            android:id="@+id/text_signup_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp"
            android:layout_marginStart="20dp"
             />


        <TextView
            android:id="@+id/text_signup_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/HeaderH1"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/text_signup_signup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="55dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/et_signup_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rectangle"
            android:hint="@string/input_name"
            style="@style/SectionH1"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/text_signup_name"
            app:layout_constraintStart_toStartOf="@id/text_signup_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="6dp"
            android:padding="12dp" />

        <TextView
            android:id="@+id/text_signup_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            style="@style/HeaderH1"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_name"
            app:layout_constraintStart_toStartOf="@id/et_signup_name"
            android:layout_marginTop="34dp" />

        <EditText
            android:id="@+id/et_signup_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_id"
            android:background="@drawable/selector_rectangle"
            android:inputType="textPassword"
            style="@style/SectionH1"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="@+id/text_signup_id"
            app:layout_constraintTop_toBottomOf="@+id/text_signup_id"
            app:layout_constraintEnd_toEndOf="@id/et_signup_name"
            android:layout_marginTop="6dp"
            android:padding="12dp" />

        <TextView
            android:id="@+id/text_signup_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/HeaderH1"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_id"
            app:layout_constraintStart_toStartOf="@id/et_signup_id"
            android:layout_marginTop="50dp" />

        <EditText
            android:id="@+id/et_singup_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:background="@drawable/selector_rectangle"
            android:inputType="textPassword"
            style="@style/SectionH1"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="@+id/text_signup_password"
            app:layout_constraintTop_toBottomOf="@+id/text_signup_password"
            app:layout_constraintEnd_toEndOf="@id/et_signup_id"
            android:layout_marginTop="10dp"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/sopt_pink"
            app:layout_constraintStart_toStartOf="@id/et_singup_password"
            app:layout_constraintEnd_toEndOf="@id/et_singup_password"
            app:layout_constraintTop_toBottomOf="@+id/et_singup_password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="67dp"
            android:layout_marginBottom="74dp"
            android:padding="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>