<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="org.sopt.myapplication.HomeData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sopt_pink">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    imageBind="@{user.image}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/text_home_input_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.name}"
                    style="@style/HeaderH2"
                    android:textColor="@color/white"
                    tools:text="@string/profile"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toBottomOf="@+id/img_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <TextView
                    android:id="@+id/text_home_input_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.id}"
                    style="@style/HeaderH4"
                    tools:text="@string/profile"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_home_input_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.introduce}"
                    style="@style/HeaderH3"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    tools:text="@string/profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_home_input_age"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="16dp"/>



            </androidx.constraintlayout.widget.ConstraintLayout>



                <Button
                    android:id="@+id/btn_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"
                    android:textColor="@color/white"
                    style="@style/SectionH6"
                    android:maxLines="2"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/sopt_yellow"
                    app:layout_constraintTop_toBottomOf="@+id/cl_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_repository"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="11dp"/>

                <Button
                    android:id="@+id/btn_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    style="@style/SectionH6"
                    android:textColor="@color/black"
                    android:background="@drawable/button_shape"
                    android:maxLines="3"
                    android:backgroundTint="@color/sopt_gray"
                    app:layout_constraintTop_toTopOf="@+id/btn_follower"
                    app:layout_constraintStart_toEndOf="@+id/btn_follower"
                    android:layout_marginStart="30dp" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_container_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_follower"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>